--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     <main class="mainA">
       <div class="center">
         <label for="name">Name</label>
-        <input id="name" name="name" placeholder="Enter A Name" />
+        <input id="name" name="name" placeholder="Enter A Name" required/>
         <button id="button">Submit</button>
         <div class="first">
           <h3 class="gender">Gender:</h3>
@@ -38,6 +38,8 @@
       </div>
       <div class="searchedNames">
         <h3>Guessed Names</h3>
+        <div class="sNames">
+        </div>
       </div>
       <script src="./Api.js"></script>
     </main>
